--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
     sdk: flutter
   flutter_riverpod: ^2.5.1
   font_awesome_flutter: 10.7.0
+  go_router: ^13.2.4
 
 dev_dependencies:
   custom_lint:
